--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
 
         <!-- documentation at http://getbootstrap.com/docs/4.1/, alternative themes at https://bootswatch.com/ -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-
+        <link href='https://fonts.googleapis.com/css?family=Lato:300,600' rel='stylesheet'>
 
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
@@ -31,7 +31,7 @@
             appKey: '72fe6c88d9ea43e4a8a32c6f70c0c25d',
             inputBindings: {
                 autoWireup: true,
-                debounceTime: 4000,
+                debounceTime: 1000,
                 preventSubmission: "invalid, throttled",
                 appendHiddenFields: true,
                 classNames: {
@@ -50,6 +50,35 @@
         src="https://unpkg.com/verifalia-widget@1.2.0/dist/verifalia-widget.js"
         integrity="sha512-KNWaWGZz1V4Hm+9e4pdMB0rJ/wOY3ifDIYdfnHyoRnAXtpTxvxU+beMZ6nO//qqPYWcm9uFlIA1eye6/BAnbjQ=="
         crossorigin="anonymous"></script>
+
+        <!-- Start of Async Drift Code -->
+        <script>
+        "use strict";
+
+        !function() {
+          var t = window.driftt = window.drift = window.driftt || [];
+          if (!t.init) {
+            if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+            t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ],
+            t.factory = function(e) {
+              return function() {
+                var n = Array.prototype.slice.call(arguments);
+                return n.unshift(e), t.push(n), t;
+              };
+            }, t.methods.forEach(function(e) {
+              t[e] = t.factory(e);
+            }), t.load = function(t) {
+              var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+              o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+              var i = document.getElementsByTagName("script")[0];
+              i.parentNode.insertBefore(o, i);
+            };
+          }
+        }();
+        drift.SNIPPET_VERSION = '0.3.1';
+        drift.load('k23xikig2n5u');
+        </script>
+        <!-- End of Async Drift Code -->
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162663603-1"></script>
@@ -129,51 +158,87 @@
     <body>
 
         <nav class="navbar navbar-expand-md navbar-light bg-light border">
-            <a class="navbar-brand" href="/"><font color="#017bff">dcyphr</font></a>
-            <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbar">
-                {% if session.user_id %}
                     <ul class="navbar-nav mr-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/browse/0">Browse</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Explore
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item" href="/explore" style="color: #017bff">Topics</a>
+                              <a class="dropdown-item" href="/method/0" style="color: #017bff">Methods</a>
+                              <a class="dropdown-item" href="/browse/0" style="color: #017bff">See all</a>
+                            </div>
+                         </li>
                         <li class="nav-item"><a class="nav-link" href="/request">Request</a></li>
-                        <li class="nav-tem"><a class="nav-link" href="/method/0">Methods</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/tasks">Contribute</a></li>
-                        <li class="nav-tem"><a class="nav-link" href="/contact">Contact</a></li>
-                        <li class="nav-tem"><a class="nav-link" href="/about">Help</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Contribute
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item" href="/tasks" style="color: #017bff">Tasks</a>
+                              <a class="dropdown-item" href="/suggestions/0" style="color: #017bff">QuickTasks</a>
+                            </div>
+                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Help
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item" href="/about" style="color: #017bff">How to Use</a>
+                              <a class="dropdown-item" href="/contact" style="color: #017bff">Contact Us</a>
+                            </div>
+                         </li>
+                         <!--<li class="nav-item px-4 dropdown">-->
+                         <!--  <div class="row">-->
+                         <!--     <a class="navbar-brand" href="/"><font color="#017bff">dcyphr</font></a>-->
+                         <!--  </div>-->
 
-                        <form action="/" method="POST">
-                            <div class="nav-item ml-md-3 mb-md-1 input-group">
-                            <input type="text" class="form-control border border-dark" name="search" placeholder="Search...">
-                        </div>
-                        </form>
-                    </ul>
-                    <ul class="navbar-nav ml-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/profile/{{ session['user_id'] }}">Profile</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
-                    </ul>
-                {% else %}
-                    <ul class="navbar-nav mr-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/browse/0">Browse</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/request">Request</a></li>
-                        <li class="nav-tem"><a class="nav-link" href="/method/0">Methods</a></li>
-                        <li class="nav-tem"><a class="nav-link" href="/tasks">Contribute</a></li>
-                        <li class="nav-tem"><a class="nav-link" href="/contact">Contact</a></li>
-                        <li class="nav-tem"><a class="nav-link" href="/about">Help</a></li>
+                         <!-- <div class="dropdown-menu dropdown-menu-left" aria-labelledby="servicesDropdown">-->
+                         <!--  <a class="dropdown-item" href="#">What is dcyphr?</a>-->
+                         <!--  <a class="dropdown-item" href="#">How does dcyphr fit your workflow?</a>-->
+                         <!--  <div class="dropdown-divider"></div>-->
+                         <!--  <div class="d-md-flex align-items-start justify-content-start">-->
+                         <!--   <div>-->
+                         <!--    <div class="dropdown-header" style="color: #017bff">EXPLORE</div>-->
+                         <!--    <a class="dropdown-item" href="#">dcyphr articles</a>-->
+                         <!--    <a class="dropdown-item" href="#">lab methods</a>-->
+                         <!--    <a class="dropdown-item" href="#">request an article</a>-->
+                         <!--   </div>-->
+                         <!--   <div>-->
+                         <!--    <div class="dropdown-header" style="color: #017bff">CONTRIBUTE</div>-->
+                         <!--    <a class="dropdown-item" href="#">tasks</a>-->
+                         <!--    <a class="dropdown-item" href="#">quickTasks</a>-->
+                         <!--   </div>-->
+                         <!--   <div>-->
+                         <!--    <div class="dropdown-header" style="color: #017bff">HELP</div>-->
+                         <!--    <a class="dropdown-item" href="#">mission</a>-->
+                         <!--    <a class="dropdown-item" href="#">contact</a>-->
+                         <!--   </div>-->
+                         <!--  </div>-->
+                         <!-- </div>-->
+                         <!--</li>-->
 
 
                         <form action="/" method="POST">
                         <div class="nav-item ml-3 mb-1 input-group">
-                            <input class="form-control border border-dark" type="text" name="search" placeholder="Search...">
+                            <input class="form-control border border-dark border20" type="text" name="search" placeholder="Search">
                         </div>
                         </form>
 
 
                     </ul>
+                    {% if session.user_id %}
                     <ul class="navbar-nav ml-auto mt-2">
-                        <li class="nav-item"><a class="nav-link" href="/register">Register</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/profile/{{ session['user_id'] }}"><button class="btn btn-outline-secondary" >Profile</button></a></li>
+                        <li class="nav-item"><a class="nav-link" href="/logout"><button class="btn btn-outline-primary">Log Out</button></a></li>
+                    </ul>
+                {% else %}
+
+                    <ul class="navbar-nav ml-auto mt-2">
+                        <li class="nav-item"><a class="nav-link" href="/login"><button class="btn btn-outline-secondary">Log In</button></a></li>
+                        <li class="nav-item"><a class="nav-link" href="/register"><button class="btn btn-outline-primary">Sign Up</button></a></li>
                     </ul>
                 {% endif %}
             </div>
@@ -199,7 +264,7 @@
     </body>
     <br>
 <!-- Footer -->
-<footer class="page-footer font-small mt-auto" style="background: #017bff; position: relative; bottom: 0; width: 100%">
+<footer class="page-footer font-small mt-auto" style="background: #08356f; position: relative; bottom: 0; width: 100%">
 
   <!-- Footer Elements -->
   <div class="container">
@@ -252,7 +317,7 @@
 
   <!-- Copyright -->
   <div id="footer-content" class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://mdbootstrap.com/"> www.dcyphr.org</a>
+    <a href="https://www.dcyphr.org" style="color:white" target="_blank"> www.dcyphr.org </a>
   </div>
   <!-- Copyright -->
 
