--- a/templates/index.html
+++ b/templates/index.html
@@ -1,135 +1,249 @@
-{% extends "layout.html" %}
+{% extends "indexLayout.html" %}
 {% block title %}
     Home
 {% endblock %}
 
+{% block navbar %}
+<nav class="navbar navbar-expand-md navbar-light" style="background: #000d25">
+            <div class="collapse navbar-collapse" id="navbar">
+                    <ul class="navbar-nav mr-auto mt-2">
+                        <li class="nav-item">
+                            <a href="/" class="nav-link text-white">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Explore
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item" href="/explore" style="color: #000d25">Topics</a>
+                              <a class="dropdown-item" href="/method/0" style="color: #000d25">Methods</a>
+                              <a class="dropdown-item" href="/browse/0" style="color: #000d25">See all</a>
+                            </div>
+                         </li>
+                        <li class="nav-item"><a class="nav-link text-white" href="/request">Request</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-white" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Contribute
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item" href="/tasks" style="color: #000d25">Tasks</a>
+                              <a class="dropdown-item" href="/suggestions/0" style="color: #000d25">QuickTasks</a>
+                            </div>
+                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link text-white" href="#" id="navbarDropdown1" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Help
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item" href="/about" style="color: #000d25">How to Use</a>
+                              <a class="dropdown-item" href="/contact" style="color: #000d25">Contact Us</a>
+                            </div>
+                         </li>
+                         <!--<li class="nav-item px-4 dropdown">-->
+                         <!--  <div class="row">-->
+                         <!--     <a class="navbar-brand" href="/"><font color="#017bff">dcyphr</font></a>-->
+                         <!--  </div>-->
+
+                         <!-- <div class="dropdown-menu dropdown-menu-left" aria-labelledby="servicesDropdown">-->
+                         <!--  <a class="dropdown-item" href="#">What is dcyphr?</a>-->
+                         <!--  <a class="dropdown-item" href="#">How does dcyphr fit your workflow?</a>-->
+                         <!--  <div class="dropdown-divider"></div>-->
+                         <!--  <div class="d-md-flex align-items-start justify-content-start">-->
+                         <!--   <div>-->
+                         <!--    <div class="dropdown-header" style="color: #017bff">EXPLORE</div>-->
+                         <!--    <a class="dropdown-item" href="#">dcyphr articles</a>-->
+                         <!--    <a class="dropdown-item" href="#">lab methods</a>-->
+                         <!--    <a class="dropdown-item" href="#">request an article</a>-->
+                         <!--   </div>-->
+                         <!--   <div>-->
+                         <!--    <div class="dropdown-header" style="color: #017bff">CONTRIBUTE</div>-->
+                         <!--    <a class="dropdown-item" href="#">tasks</a>-->
+                         <!--    <a class="dropdown-item" href="#">quickTasks</a>-->
+                         <!--   </div>-->
+                         <!--   <div>-->
+                         <!--    <div class="dropdown-header" style="color: #017bff">HELP</div>-->
+                         <!--    <a class="dropdown-item" href="#">mission</a>-->
+                         <!--    <a class="dropdown-item" href="#">contact</a>-->
+                         <!--   </div>-->
+                         <!--  </div>-->
+                         <!-- </div>-->
+                         <!--</li>-->
+
+
+                        <form action="/" method="POST">
+                        <div class="nav-item ml-3 mb-1 input-group">
+                            <input class="form-control border border-dark border20" type="text" name="search" placeholder="Search">
+                        </div>
+                        </form>
+
+
+                    </ul>
+                    {% if session.user_id %}
+                    <ul class="navbar-nav ml-auto mt-2">
+                        <li class="nav-item"><a class="nav-link" href="/profile/{{ session['user_id'] }}"><button class="btn btn-outline-light" >Profile</button></a></li>
+                        <li class="nav-item"><a class="nav-link" href="/logout"><button class="btn btn-outline-light">Log Out</button></a></li>
+                    </ul>
+                {% else %}
+
+                    <ul class="navbar-nav ml-auto mt-2">
+                        <li class="nav-item"><a class="nav-link" href="/login"><button class="btn btn-outline-light">Log In</button></a></li>
+                        <li class="nav-item"><a class="nav-link" href="/register"><button class="btn btn-outline-light">Sign Up</button></a></li>
+                    </ul>
+                {% endif %}
+            </div>
+        </nav>
+{% endblock %}
+
 {% block main %}
-
-<div>
-    <!--<div class="alert alert-warning alert-dismissible fade show" role="alert">-->
-    <!--  <h4 class="alert-heading">COVID-19 Write-a-thon 4/25 12PM EST to 4/26 12PM EST</h4>-->
-    <!--  <p><strong>$100 prize to the winning team!</strong> Register <a href="/form" target="_blank">here</a>.</p>-->
-    <!--  <p>Teams of up to 2 people. More instructions can be found <a href="https://docs.google.com/document/d/1uRrkxKQpI4aZVJrmxJKyMrlSyyKv3E2IyEW-kRiuo7U/edit?ts=5e8d2bf4" target="_blank">here</a>.</p>-->
-    <!--  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>-->
-    <!--</div>-->
-    <div id="searchbar" class="h-50">
-        <section class="mb-5 h-auto">
-
-
-        <br><br>
-
-        <h1 class="display-3"><font color="#017bff">dcyphr</font></h1><br>
-        <blockquote>
-            <p>“Any fool can make things bigger, more complex, and more violent. It takes a touch of genius — and a lot of courage — to move in the opposite direction.”</p>
-            <footer class="blockquote-footer">Albert Einstein</footer>
-        </blockquote><br>
-        <form action="/" method="POST">
-        <div class="input-group col-sm-6 mx-auto">
-            <input type="text" class="form-control" name="search" aria-label="Search" aria-describedby="searchbar">
-            <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="submit">Search</button>
+<div class="main">
+    <div class="home_page row">
+        <div class="col-lg-7 col-12">
+            <div class="index_info text-left" style="font-family: Lato; font-weight: 300">
+                <div style="letter-spacing:0.1em">
+                    dcyphr
+                </div>
+                <p>
+                    Explore the world's first open-source database
+                    <br>
+                    of scientific articles enhanced for readability.
+                </p><br>
+                <a href="/explore" class="btn bg-0 border border-white">
+                    Explore &nbsp &#8594;
+                </a>
             </div>
         </div>
-        </form>
-        <br>
-        <p><b>New to dcyphr?</b> Learn how to use the site <font color="#017bff"><a href="/about">here</a></font> or register <font color="#017bff"><a href="/register">here</a></font>.</p>
-        </section>
+        <div class="col m-0 p-0">
+            <div class="h-50">
 
-        <div class="container h-50 mt-4 pt-4;">
-            <div class= "row h-100">
-                <div class="col-12 col-md-3 p-2 border" style="height: 250px">
-                    <div class="container h-75">
-                        <h5 class="card-title"><b>Browse</b></h5>
-                        <p class="card-text p-2">Browse dcyphr-d scientific articles for your classes. All summaries are moderated by professionals for accuracy.</p>
-                    </div>
-                    <div class="container">
-                        <a href="/browse/0" class="btn btn-primary">Browse</a>
-                    </div>
+            </div>
+            <img class="h-50 w-100 mt-auto" src="{{ url_for('static', filename='gene1.png') }}" alt="">
+        </div>
+    </div>
+
+    <div class="home_page row">
+         <div class="col-lg-7 col-12">
+            <div class="index_info text-left" style="font-family: Lato; font-weight: 300">
+                <div class="mb-2" style="font-size: 3.0em">
+                    DECENTRALIZING SCIENCE
                 </div>
-                <div class="col-12 col-md-3 p-2 border" style="height: 250px; margin: 0 auto">
-                    <div class="container h-75">
-                        <h5 class="card-title"><b>Contribute</b></h5>
-                        <p class="card-text p-2">Become a dcyphr-r and build your skills in scientific communication and to help make science more accessible for everyone.</p>
-                    </div>
-                    <div class="container">
-                        <a href="/tasks" class="btn btn-primary">Contribute</a>
-                    </div>
-                </div>
-                <div class="col-12 col-md-3 p-2 border" style="height: 250px">
-                    <div class="container h-75">
-                        <h5 class="card-title"><b>Request</b></h5>
-                        <p class="card-text p-2">Don't see the article that you need dcyphr-d? Wish to dcyphr an article but its not requested yet? Click here to put in a request.</p>
-                    </div>
-                    <div class="container">
-                        <a href="/request" class="btn btn-primary">Request</a>
-                    </div>
-              </div>
+                <p>
+                    Putting scientific results at your fingertips
+                    <br>
+                    Keep up with literature and understand results
+                    <br>
+                    Learn new topics faster
+                </p>
+                <br>
+                <a href="/about" class="btn bg-white btn-primary" style="color: #017bff">
+                    Learn more &nbsp &#8594;
+                </a>
+            </div>
+        </div>
+
+        <div class="col m-0 p-0">
+            <div class="h-20">
+            </div>
+            <img class="h-60 w-100" style="margin-top: 100px;"src="{{ url_for('static', filename='science.png') }}" alt="">
+            <div class="h-20">
             </div>
         </div>
     </div>
 
-    <div>
-        <section class="w3-container w3-half w3-content my-5 p-5">
-            <h2 class="display-4 text-primary">mission</h2>
-            <p class="w3-justify" style="line-height: 40px;">The purpose of science is to explain the natural world to us. However, in the status quo, the knowledge and tools of science is limited to a select few that have the resources to learn it. The language in scientific articles is unnecessarily complex and full of jargon. This makes it hard even for those that have the education to keep up with the literature.</p>
-            <p>Thus, <b style="color: #017bff">dcyphr</b>: an open-source platform that makes science more accessible to the public.</p>
-        </section>
-        <section class="w3-container w3-half w3-content my-5 p-5">
-            <h2 class="display-4 text-primary">top dcyphr-rs</h2>
-            <table class="table table-striped">
-                <thead>
-                    <th>Username</th>
-                    <th>Points</th>
-            </thead>
-            {% for i in range(lead_length) %}
-            <tr>
-                <td><a href="/public/{{ leaderboard[i]['id'] }}">{{ leaderboard[i]['username'] }}</a></td>
-                <td>{{ leaderboard[i]["points"] }}</td>
-            </tr>
-            {% endfor %}
-            </table>
-        </section>
+    <div class="home_page row">
+         <div class="col-lg-7 col-12">
+            <div class="index_info text-left" style="font-family: Lato; font-weight: 300">
+                <div class="mb-2" style="font-size: 3.0em">
+                    SHARE KNOWLEDGE
+                </div>
+                <p>
+                    Join the movement and help make science more accessible
+                    <br>
+                    Register and upload your summaries
+                    <br>
+                    Work with AI to quickly dcyphr articles
+                </p>
+                <br>
+                <a href="/tasks" class="btn bg-0 border border-white">
+                    Contribute &nbsp &#8594;
+                </a>
+            </div>
+        </div>
+
+        <div class="col" style="color: black; font-family: Lato, font-weight:300">
+
+            <div class="h-25">
+
+            </div>
+
+            <div class="p-3 mx-5 border border-white bg-white" style="min-height: 50%; border-radius:20px; box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.71);">
+                <div class="text-left text-muted" style="font-size:30px; margin-left:20px; font-family: Arial">Leaderboard</div>
+
+                <div class="row m-3 ">
+                    <div class="col-3">
+
+                    </div>
+
+                    <div class="col-5 border-bottom" style="font-size:20px; color:#017bff">
+                        User
+                    </div>
+
+                    <div class="col-3 border-bottom" style="font-size:20px; color:#017bff">
+                        Points
+                    </div>
+                </div>
+
+                {% for i in range(lead_length) %}
+                <div class="row m-3">
+                    <div class="col-3">
+                        {% if i == 0 %}
+                        <i class="fa fa-trophy border-0 fa-lg" style="color:gold"></i>
+                        {% elif i == 1 %}
+                        <i class="fa fa-trophy border-0 fa-lg" style="color:silver"></i>
+                        {% elif i == 2 %}
+                        <i class="fa fa-trophy border-0 fa-lg" style="color:bronze"></i>
+                        {% endif %}
+                    </div>
+
+                    <div class="col-5">
+                        <a href="/public/{{ leaderboard[i]['id'] }}">{{ leaderboard[i]['first'] }} {{leaderboard[i]['last'][0]}}.</a>
+                    </div>
+
+                    <div class="col-3" style="color: rgba(211, 0, 0, 0.58)">
+                        {{ leaderboard[i]["points"] }}
+                    </div>
+                </div>
+                {% endfor %}
+
+            </div>
+        </div>
     </div>
 
-        <!--<div id="teammembers" class="p-5 mt-5">-->
-        <!--<section class="w3-row-padding w3-center" >-->
-        <!--    <h2 class="display-4 mb-5 text-primary">team</h2>-->
-        <!--    <article class="w3-third">-->
-        <!--        <p><b style="color: black">Jeffrey Ma</p></b>-->
-        <!--        <p><b style="color: #017bff">Founder and CEO</p></b>-->
-        <!--        <p>jeffrey.ma.jzm5@yale.edu</p>-->
-        <!--    </article>-->
-        <!--    <article class="w3-third">-->
-        <!--        <b style="color: black"><p>Onyedikachi Uche</p></b>-->
-        <!--        <b style="color: #017bff"><p>Research Director</p></b>-->
-        <!--        <p>onyedikachi.uche@yale.edu</p>-->
-        <!--    </article>-->
-        <!--    <article class="w3-third">-->
-        <!--        <p><b>Aidan Neziri</p></b>-->
-        <!--        <b style="color: #017bff"><p>Business Director</p></b>-->
-        <!--        <p>aidan.neziri@yale.edu</p>-->
-        <!--    </article>-->
-        <!--</section>-->
-        <!--<br><br>-->
-        <!--<br><br>-->
-        <!--<section class="w3-row-padding w3-center">-->
-        <!--    <article class="w3-quarter">-->
-        <!--        <b><p>Ivan Chan</p></b>-->
-        <!--        <p>ivan.chan@yale.edu</p>-->
-        <!--    </article>-->
-        <!--    <article class="w3-quarter">-->
-        <!--        <b><p>Janet Hsu</p></b>-->
-        <!--        <p>janet.hsu@yale.edu</p>-->
-        <!--    </article>-->
-        <!--    <article class="w3-quarter">-->
-        <!--        <b><p>Jalil Morris</p></b>-->
-        <!--        <p>jalil.morris@yale.edu</p>-->
-        <!--    </article>-->
-        <!--    <article class="w3-quarter">-->
-        <!--        <b><p>Graham Stodolski</p></b>-->
-        <!--        <p>graham.stodolski@yale.edu</p>-->
-        <!--    </article>-->
-        <!--</section><br><br>-->
-        <!--</div>-->
+    <div class="home_page row">
+        <div class="col-lg-7 col-12">
+            <div class="index_info text-left" style="font-family: Lato; font-weight: 300">
+                <div class="mb-2" style="font-size: 3.0em">
+                    REQUEST INSIGHTS
+                </div>
+                <p>
+                    Streamline your workflow with summaries you can trust
+                    <br>
+                    Turbocharge your research by requesting results immediately
+                    <br>
+                    Get personalized dcyphr-d articles
+                </p>
+                <br>
+                <a href="/request" class="btn bg-white btn-primary" style="color: #017bff">
+                    Request &nbsp &#8594;
+                </a>
+            </div>
+        </div>
+        <div class="col m-0 p-0">
+            <div class="h-20">
+            </div>
+            <img class="h-60 w-100" style="margin-top: 100px;"src="{{ url_for('static', filename='network.png') }}" alt="">
+            <div class="h-20">
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
