--- a/templates/login.html
+++ b/templates/login.html
@@ -5,18 +5,31 @@
 {% endblock %}
 
 {% block main %}
-<div style="padding: 80px">
-    <b style="color: DodgerBlue">Welcome back dcyphr-r!</b>
-    <br>
+
 <br>
-    <form action="/login" method="post">
-        <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
+<br>
+<h2 style="font-family: Georgia;">Log in</h2>
+<div class="p-0 mx-0 w-100" style="">
+    <div class="row">
+        <div class="col-sm">
+            <div class="card mx-auto border20" style="width: 30rem;">
+                <form action="/login" method="POST" style="margin:20px; text-align: left;s">
+                    <div class="form-group">
+                        <label for="username" class="font-weight text-muted" style="font-size:12px">Username</label>
+                        <input type="text" id="username" class="form-control border20" style="width:100%;" name="username">
+                    </div>
+                    <div class="form-group">
+                        <label for="password" class="font-weight text-muted" style="font-size:12px">Password</label>
+                        <input type="password" id="password" class="form-control border20" style="width:100%" name="password">
+                    </div>
+                    <input type="submit" class="btn btn-outline-primary btn-block border20" value="Log In">
+
+                </form>
+            </div>
         </div>
-        <div class="form-group">
-            <input class="form-control" name="password" placeholder="Password" type="password">
-        </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
-    </form>
+    </div>
+    <div class="row" style="margin: 20px">
+        <small class="mx-auto text-muted">Not registered? <a href="/register" class="text-primary">Sign up!</a></small>
+    </div>
 </div>
 {% endblock %}
