--- a/templates/public.html
+++ b/templates/public.html
@@ -5,25 +5,41 @@
 {% endblock %}
 
 {% block main %}
-<div class="container mt-4">
+<div class="main" style="height: 100vh; font-family: Lato">
+    <div class="container h-100 mt-5">
+        <div class="row h-25">
+            <div class="col-2">
+                <i class="fa fa-user-circle border-0 fa-5x" aria-hidden="true" style="color: #017bff; margin-top: 10px"></i>
+                {% if info[0]['admin'] == 1 %}
+                <p class="text-muted">Admin</p>
+                {% endif %}
+            </div>
 
-    <div>
-        <i class="fa fa-users border-0 fa-4x mb-4" aria-hidden="true" style="color: #ff2f2b"></i>
+            <div class="col-6 text-left">
+                <h3 style="font-family: Georgia">{{ info[0]['first'] }} {{ info[0]['last'] }}</h3>
+                <p class="">@{{ info[0]["username"] }}</p>
+                <p>{{ info[0]['bio'] | safe }}</p>
+            </div>
 
-        <h4 class="mb-4"> {{ info[0]["username"] }} has {{ info[0]["points"] }} points! </h4>
-        <h5 class="mb-4">{{ info[0]['bio'] | safe }}</h5>
+            <div class="col-4 text-left">
+                <div class="h-25">
+                </div>
 
-        <h5>Articles dcyphr-d: {{ length }} </h5>
+                <div class="h-50" style="color: DodgerBlue">
+                    <p>{{ info[0]["points"] }} points</p>
+                    <p>{{ length }} articles dcyphr-d</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row" style="min-height: 75%">
+            <div class="m-5 p-4 col border border-dark text-left border20">
+                <h4 class="mt-0 border-bottom" style="font-family: Georgia"><strong>Contributions</strong></h4>
+                {% for i in range(length) %}
+                    <a class="disabledButton my-4" href="/read/{{ articles[i]['id'] }}" align="rights">{{ articles[i]["article"] }}</a><br>
+                {% endfor %}
+            </div>
+        </div>
     </div>
-
-
-
-    <br>
-<div>
-    <h2 class="mt-3" style="color: #ff2f2b; font-weight: 200">Highlights</h2>
-    {% for i in range(length) %}
-    <a href="/read/{{ articles[i]['id'] }}" align="rights">{{ articles[i]["article"] }}</a><br>
-    {% endfor %}
-</div>
 </div>
 {% endblock %}
