--- a/templates/register.html
+++ b/templates/register.html
@@ -8,18 +8,57 @@ Register
 {% block main %}
 <br>
 <br>
-<p><b style="color: DodgerBlue">Sign up to join the movement to decentralize scientific knowledge!</b></p>
-<form action="/register" method="POST">
-    <br>
-    <input type="text" class="form-control" name="username" placeholder="username">
-    <p></p>
-    <input type="password" class="form-control" name="password" placeholder="password">
-    <p></p>
-    <input type="password" class="form-control" name="confirm" placeholder="confirm password">
-    <p></p>
-    <input type="text" class="form-control" name="email" placeholder="email">
-    <p></p>
-    <input type="submit" class="btn btn-primary">
+<h2 style="font-family: Georgia;">Join dcyphr</h2>
+<div class="p-0 mx-0 w-100" style="">
+    <div class="row">
+        <div class="col-sm">
+            <div class="card mx-auto border20" style="width: 30rem;">
+                <form action="/register" method="POST" style="margin:20px; text-align: left;">
+                    <div class="row">
+                        <div class="form-group col-6">
+                            <label for="first" class="font-weight text-muted" style="font-size:12px">First Name</label>
+                            <div>
+                                <input type="text" id="first" class="form-control border20 w-100" name="first" required>
+                            </div>
+                        </div>
+                        <div class="form-group col-6">
+                            <label for="last" class="font-weight text-muted" style="font-size:12px">Last Name</label>
+                            <div>
+                                <input type="text" id="last" class="form-control border20 w-100" name="last" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="username" class="font-weight text-muted" style="font-size:12px">Username</label>
+                        <input type="text" id="username" class="form-control border20" style="width:100%;" name="username">
+                    </div>
+                    <div class="form-group">
+                        <label for="password" class="font-weight text-muted" style="font-size:12px">Password</label>
+                        <input type="password" id="password" class="form-control border20" style="width:100%" name="password">
+                    </div>
 
-</form>
+                    <div class="form-group">
+                        <label for="confirmPassword" class="font-weight text-muted" style="font-size:12px">Confirm password</label>
+                        <input type="password" id="confirmPassword" class="form-control border20" style="width:100%" name="confirm">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="email" class="font-weight text-muted" style="font-size:12px">Email</label>
+                        <input type="text" id="email" class="form-control border20" style="width:100%" name="email">
+                    </div>
+                    <div class="form-check">
+                      <label class="form-check-label" style="font-family:Arial">
+                        <input type="checkbox" class="form-check-input" value="1" name="newsletter" checked>Join our newsletter for weekly updates!
+                      </label>
+                    </div><br>
+                    <input type="submit" class="btn btn-outline-primary btn-block border20" value="Continue">
+
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="row" style="margin: 20px">
+        <small class="mx-auto text-muted">Have an account? <a href="/login" class="text-primary">Log in</a></small>
+    </div>
+</div>
 {% endblock %}
