--- a/templates/request.html
+++ b/templates/request.html
@@ -13,16 +13,40 @@
         <p class="ml-4 mt-2" style="font-size: 0.6em; border-bottom: 1px solid black; padding: 10px">Fill out the form to request a summary to be made!</p>
     </div>
 <br>
-<form action="/request" method="POST" class="form-group">
-    <input type="text" class="form-control" placeholder="Article name" name="article" required>
-    <p></p>
-    <input type="text" class="form-control" placeholder="DOI" name="doi" required>
-    <p></p>
-    <input type="text" class="form-control" placeholder="Link" name="link" required>
-    <p></p>
-    <input type="text" class="form-control" placeholder="APA citation" name="citation">
-    <p></p>
-    <button class="btn btn-primary" type="submit">Submit</button>
-</form>
+
+<div class="row">
+    <div class="col-sm">
+        <div class="card mx-auto" style="width: 30rem; border-radius:20px">
+            <form action="/request" method="POST" class="form-group" style="margin:20px; text-align:left;">
+
+                <div class="form-group">
+                    <label for="article" class="font-weight text-muted" style="font-size:12px">Title of article</label>
+                    <input type="text" id="article" class="form-control w-100" style="border-radius:20px" name="article" required>
+                </div>
+                <div class="form-group">
+                    <div>
+                        <label for="doi" class="font-weight text-muted" style="font-size:12px">DOI</label>
+                        <a href="#event1"><i class="fa fa-question-circle border-0" style="color: #017bff"></i></a>
+                        <div class="tip">
+                            <p>Find DOI on the page either near abstract or ctrl + f search for it.</p>
+                            <p>If it appears like this "DOI: 10.1038/s41586-020-2286-9" you should input everything that follows "DOI: "</p>
+                            <p>If it appears like this "https://doi.org/10.1038/s41586-020-2286-9" you should input everything that follows "https://doi.org/"</p>
+                        </div>
+                    </div>
+                    <input type="text" id="doi"class="form-control w-100" name="doi" style="border-radius:20px" required>
+                </div>
+                <div class="form-group">
+                    <label for="link" class="font-weight text-muted" style="font-size:12px">Link to article</label>
+                    <input type="text" id="link" class="form-control w-100" name="link" style="border-radius:20px" required>
+                </div>
+
+                <button class="btn btn-outline-primary btn-block" style="border-radius:20px" type="submit">Request</button>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+
 </div>
 {% endblock %}
