--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,10 @@
 {% endblock %}
 
 {% block navbar %}
-<nav class="navbar navbar-expand-md navbar-light" style="background: #000d25">
+<nav class="navbar navbar-expand-md navbar-dark" style="background: #000d25">
+            <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-target="#navbar" data-toggle="collapse" type="button">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav mr-auto mt-2">
                         <li class="nav-item">
