--- a/templates/contact.html
+++ b/templates/contact.html
@@ -9,7 +9,7 @@
         <div class="d-inline ml-4" style="border-left: 4px solid orange;"></div>
         <div class="d-inline ml-2" style="color: #017bff">Contact</div>
         <p class="ml-4 mt-2" style="font-size: 0.6em; border-bottom: 1px solid black; padding: 10px">Check out our <b style="color: #017bff"><u><a href="http://dcyphrgroup.wordpress.com">blog</a></u> </b>for updates!
-        <br>Or send us an email with any concerns at dcyphrteam@gmail.com</p>
+        <br>Or send us an email with any concerns at team@dcyphr.org</p>
     </div>
 
 <br>
