--- a/templates/indexLayout.html
+++ b/templates/indexLayout.html
@@ -106,7 +106,7 @@
 
         <!-- Content -->
         <h4 class="text-lowercase">dcyphr</h5>
-        <p>See a bug? Send a message to dcyphrteam@gmail.com</p>
+        <p>See a bug? Send a message to team@dcyphr.org</p>
         </div>
 
       <div class="col-6 mt-md-4 float-right">
