--- a/templates/explore.html
+++ b/templates/explore.html
@@ -7,7 +7,7 @@
 {% block main %}
 <div class="main">
     <div class="container">
-        <h1 class="my-5 text-left" style="font-family:Lato; font-weight:600">explore</h1>
+        <h1 class="my-5 text-left" style="font-family:Lato; font-weight:600">Explore</h1>
         <div class="row" style="">
             {% for i in range(length) %}
             <div class="col-12 col-lg-4 col-md-6 p-0 text-left mx-auto mb-5" style="min-height: 45vh">
