fixed tag capitalization

--- a/templates/tag.html
+++ b/templates/tag.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    {{ title[0]['title'] }}
+    {{ tags[0]['title'] }}
 {% endblock %}
 
 {% block main %}
@@ -9,7 +9,7 @@
 <div class="container mt-5">
     <div class="text-left pl-3" style="font-size: 1.8em; ">
         <div class="d-inline ml-4" style="border-left: 4px solid orange;"></div>
-        <div class="d-inline ml-2" style="color: #017bff">{{ title[0]['title'] }}</div>
+        <div class="d-inline ml-2" style="color: #017bff">{{ tags[0]['title'] }}</div>
         <p class="ml-4 mt-2" style="font-size: 0.6em; border-bottom: 1px solid black; padding: 10px">{{ tags[0]['text'] }}
         {% if admin == 1 %}
         <button class="btn btn-link" style="padding-bottom:10px"data-target="#description" data-toggle="collapse">Edit</button>
