--- a/templates/public.html
+++ b/templates/public.html
@@ -6,7 +6,7 @@
 
 {% block main %}
 <div class="main" style="height: 100vh; font-family: Lato">
-    <div class="container h-100 mt-5">
+    <div class="container mt-5" style="min-height: 100vh">
         <div class="row h-25">
             <div class="col-2">
                 <i class="fa fa-user-circle border-0 fa-5x" aria-hidden="true" style="color: #017bff; margin-top: 10px"></i>
