--- a/templates/read.html
+++ b/templates/read.html
@@ -144,7 +144,7 @@
                             <a href="/public/{{ contributors[i]['user_id'] }}">{{ contributors[i]['first'] }} {{ contributors[i]['last'][0] }}.</a>
                         </div>
                         <div class="col-4" style="font-size: 14px">
-                            {{ contributors[i]['COUNT(*)'] }}
+                            {{ contributors[i]['count'] }}
                         </div>
                     </div>
                 {% endfor %}
